[project]
name = "ablist"
version = "0.1.0"
description = "ablist is a bruteforcing-tool to generate custom wordlist out of given set of words"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
]

[project.scripts]
ablist = "ablist.__main__:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"